# opendds_minimal

./: .gitignore  CMakeLists.txt  clean.sh  gen.sh  run_dcps.sh  run_pub.pl  run_publisher.sh  run_pubsub.pl  run_pubsub.sh  run_pubsub.sh~  run_sub.pl  run_subsciber.sh  setup.sh
api/boilerplate/: Boilerplate.cpp  Boilerplate.h
api/datareader/: DataReaderListenerImpl.cpp
config/: dds_tcp_conf.ini  rtps.ini
idl/: Template.idl
src/: Publisher.cpp  Subscriber.cpp
